[project]
name = "PySide-learning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Leo", email = "zeng.yuchen@hkaco.com"},
]
dependencies = ["PySide6>=6.9.1"]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
